# OKmathEval

./: .gitignore  BinaryExpression.cpp  BinaryExpression.hpp  CMakeLists.txt  Expression.cpp  Expression.hpp  Lexer.cpp  Lexer.hpp  Makefile  NumberExpression.cpp  NumberExpression.hpp  Parser.cpp  Parser.hpp  Token.cpp  Token.hpp  TokenNode.cpp  TokenNode.hpp  cmake_install.cmake  test.cpp
